added a global types file more move gen optimisation

--- a/toMateTo_engine/move_generation/TODO
+++ b/toMateTo_engine/move_generation/TODO
@@ -1,1 +1,2 @@
-Testen ob hash table schneller sing für pinned pieces oder die berechnung ob ein Feld bedroht ist!
+rework other find_move functions.
+rework way moves are stored.
