created a lookup Table for Pawn attack moves. made Plans for tomorrow

--- a/toMateTo_engine/move_generation/TODO
+++ b/toMateTo_engine/move_generation/TODO
@@ -1,4 +1,5 @@
-rework other find_move functions.
+In king move function first check for double check -> we dont need to look fore pins -> look for save squares
+    the is_save function can easily be adjusted to count number of attacks and stop early if 2 are found.
 rework way moves are stored.
 write Speed test function.
 
